--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@api.video/hlsjs-player-analytics",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "api.video player analytics plugin for hls.js based players",
   "repository": {
     "type": "git",
@@ -25,25 +25,24 @@
   },
   "peerDependencies": {},
   "devDependencies": {
-    "@types/jest": "^26.0.21",
-    "@types/jsdom": "^16.2.7",
+    "@types/jest": "^26.0.22",
+    "@types/jsdom": "^16.2.9",
     "in-publish": "^2.0.1",
     "jest": "^26.6.3",
-    "jsdom": "^16.5.1",
+    "jsdom": "^16.5.2",
     "jsdom-global": "^3.0.2",
     "ts-jest": "^26.5.4",
-    "ts-loader": "^8.0.18",
+    "ts-loader": "^8.1.0",
     "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
     "typescript": "^4.2.3",
-    "videojs-generator-verify": "^3.0.2",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
-    "@api.video/player-analytics": "latest",
+    "@api.video/player-analytics": "^1.0.1",
     "@types/hls.js": "^0.13.3",
-    "core-js": "^3.8.3",
+    "core-js": "^3.10.0",
     "url-polyfill": "^1.1.12"
   }
 }
